--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,74 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+
+    <title>Bucket-up</title>
+
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    test
+
+	<section class="content_wrapper">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-4 no-float content_left">
+					<div class="content_logo">
+						<a href="#0">
+							<img src="assets/images/logo-bucked.png" alt="">
+						</a>
+					</div>
+
+					<div class="content_bottom_row">
+						<div class="left">
+							<ul>
+								<li>
+									<a href="#0">
+										<span class="big_number">1</span>
+										Choose <br> Sampler
+									</a>
+								</li>
+
+								<li>
+									<a href="#0">
+										<span class="big_number">2</span>
+										Upgrades
+									</a>
+								</li>
+
+								<li>
+									<a href="#0">
+										<span class="big_number">3</span>
+										Checkout
+									</a>
+								</li>
+							</ul>
+						</div>
+
+						<div class="right">
+							<div class="content_bank">
+								<img src="assets/images/bank.png" alt="">
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-8 content_right no-float">
+					<div class="rtitle_row">
+						<div class="left">
+							<h2 class="ultimate_title">
+								Ultimate <br> 
+								<span>Sampler Pack</span>
+							</h2>
+							<p>Upgrade and get 2 of EACH of the stick packs.
+							That's 16 total & the shaker!</p>
+						</div>
+					</div>
+					
+				</div>
+			</div>
+		</div>
+	</section>
+
 </body>
 </html>
