--- a/app/index.html
+++ b/app/index.html
@@ -66,8 +66,76 @@
 							<p>Upgrade and get 2 of EACH of the stick packs.
 							That's 16 total & the shaker!</p>
 						</div>
+
+						<div class="right">
+							<div class="price_dop">
+								ONLY
+							</div>
+							<div class="price_item">
+								$19.99
+							</div>
+							<div class="price_dop">
+								<img src="assets/images/arrow-right.svg" alt="">
+								A $50.95 value
+							</div>
+						</div>
 					</div>
 					
+					<div class="collection_row">
+						<div class="left">
+							<div class="product_row">
+								<div class="product_item">
+									<img src="assets/images/product-1.png" alt="">
+								</div>
+								<div class="product_item">
+									<img src="assets/images/product-2.png" alt="">
+								</div>
+								<div class="product_item">
+									<img src="assets/images/product-3.png" alt="">
+								</div>
+								<div class="product_item">
+									<img src="assets/images/product-4.png" alt="">
+								</div>
+							</div>
+
+							<p class="product_descr">
+								2X BUCKED UP - RACKED BCAA - WOKE AF - BAMF - Non-Stim -
+								BUCKED UP Collagen - BUCKED UP Black - WOKE AF Black
+							</p>
+						</div>
+
+						<div class="right">
+							<a class="upgrade_button" href="#0">upgrade now! <span class="plus">+</span></a>
+
+							<div class="upbtn_row">
+								<span class="save_text">
+									Save $30.96!
+								</span>
+								<span class="skip_text">
+									Skip upgrade
+								</span>
+							</div>
+
+							<p class="upgrade_privacy">
+								By clicking “Skip Upgrade” or “Upgrade Now”, you are agreeing to the Bucked Up <a href="#0">terms & conditions</a> and Bucked Up <a href="#0">privacy policy</a>, including receipt of Bucked Up offers and promotions. Shaker color may vary.
+							</p>
+						</div>
+					</div>
+
+					<div class="bucket_partners">
+						<a href="#0">
+							<img src="assets/images/partner-1.png" alt="">
+						</a>
+						<a href="#0">
+							<img src="assets/images/partner-2.png" alt="">
+						</a>
+						<a href="#0">
+							<img src="assets/images/partner-3.png" alt="">
+						</a>
+						<a href="#0">
+							<img src="assets/images/partner-4.png" alt="">
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
