--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,16 @@
 				</div>
 
 				<div class="col-md-8 content_right no-float">
+					<div class="content_right_top">
+						<a href="#0" class="hamburger">
+							<img src="assets/images/hamburger-button.svg" alt="">
+						</a>
+
+						<a class="mobile_logo" href="#0">
+							<img src="assets/images/logo-bucked.png" alt="">
+						</a>
+					</div>
+
 					<div class="rtitle_row">
 						<div class="left">
 							<h2 class="ultimate_title">
@@ -82,7 +92,22 @@
 					</div>
 					
 					<div class="collection_row">
+						<div class="bank_mobile">
+							<img src="assets/images/bank.png" alt="">
+						</div>
 						<div class="left">
+							<div class="price_wrapper_mobile">
+								<div class="price_dop">
+									ONLY
+								</div>
+								<div class="price_item">
+									$19.99
+								</div>
+								<div class="price_dop">
+									<img src="assets/images/arrow-right.svg" alt="">
+									A $50.95 value
+								</div>
+							</div>
 							<div class="product_row">
 								<div class="product_item">
 									<img src="assets/images/product-1.png" alt="">
@@ -121,6 +146,47 @@
 							</p>
 						</div>
 					</div>
+
+					<p class="product_descr product_descr_mobile">
+						2X BUCKED UP - RACKED BCAA - WOKE AF - BAMF - Non-Stim -
+						BUCKED UP Collagen - BUCKED UP Black - WOKE AF Black
+					</p>
+
+					<div class="upgrade_wrapper_mobile">
+						<span class="save_text">
+							Save $30.96!
+						</span>
+						<a class="upgrade_button" href="#0">upgrade now! <span class="plus">+</span></a>
+
+						<span class="skip_text">
+							Skip upgrade
+						</span>
+
+						<p class="upgrade_privacy">
+							By clicking “Skip Upgrade” or “Upgrade Now”, you are agreeing to the Bucked Up <a href="#0">terms & conditions</a> and Bucked Up <a href="#0">privacy policy</a>, including receipt of Bucked Up offers and promotions. Shaker color may vary.
+						</p>
+					</div>
+
+					<ul class="upgrades_list_mobile">
+						<li>
+							<a href="#0">
+								<span class="big_number">1</span>
+							</a>
+						</li>
+
+						<li>
+							<a href="#0">
+								<span class="big_number">2</span>
+								Upgrades
+							</a>
+						</li>
+
+						<li>
+							<a href="#0">
+								<span class="big_number">3</span>
+							</a>
+						</li>
+					</ul>
 
 					<div class="bucket_partners">
 						<a href="#0">
